@@ -66,6 +66,7 @@ v4l2_palette_t v4l2_palette[] = {
 	{ SRC_PAL_SGRBG8,  V4L2_PIX_FMT_SGRBG8 },
 	{ SRC_PAL_RGB565,  V4L2_PIX_FMT_RGB565 },
 	{ SRC_PAL_RGB555,  V4L2_PIX_FMT_RGB555 },
+	{ SRC_PAL_Y16,     V4L2_PIX_FMT_Y16    },
 	{ SRC_PAL_GREY,    V4L2_PIX_FMT_GREY   },
 	{ 0, 0 }
 };
